force-app/main/default/objects/ssot__PayGradeStep__dlm/fields/ssot__HourlyOvertimeRateAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__HourlyOvertimeRateAmount__c</fullName>
    <label>Hourly Overtime Rate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HourlyOvertimeRateAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>