force-app/main/default/objects/ssot__PayGradeStep__dlm/fields/ssot__PayGradeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PayGradeId__c</fullName>
    <label>Pay Grade</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PayGradeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>