force-app/main/default/objects/ssot__PayGradeStep__dlm/fields/ssot__rel_1727366658508_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1727366658508_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PayGradeStep_PayGradeId_map_PayGrade_rel</label>
    <referenceTo>ssot__PayGrade__dlm</referenceTo>
    <relationshipLabel>PayGradeStep_PayGradeId_map_PayGrade_rel</relationshipLabel>
    <relationshipName>rel_1727366658508_end</relationshipName>
    <type>Lookup</type>
</CustomField>